# pybirewirex

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  build_cffi.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  format.yml  publish.yml
c_src/: birewire_core.c  birewire_core.h
docs/: conf.py  index.md  installation.md  quickstart.md  vignette.md
docs/api/: analysis.md  bounds.md  rewiring.md  similarity.md
notebooks/: tutorial.ipynb
pybirewirex/: __init__.py  _birewire.c  _bounds.py  _core.py  _numpy_fallback.py  bipartite.py  similarity.py  sparse.py  undirected.py
pybirewirex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: demo.py
tests/: conftest.py  export_references.R  generate_reference_data.py  test_bipartite.py  test_bounds.py  test_core.py  test_numpy_fallback.py  test_regression.py  test_similarity.py  test_sparse.py  test_undirected.py
tests/reference_data/: bipartite_input.npy  bipartite_rewired.npy  bipartite_scores.npy  r_bipartite_N.csv  r_bipartite_col_sums.csv  r_bipartite_input.csv  r_bipartite_rewired.csv  r_bipartite_row_sums.csv  r_bipartite_scores.csv  r_undirected_N.csv  r_undirected_degree.csv  r_undirected_input.csv  r_undirected_rewired.csv  r_undirected_scores.csv  undirected_input.npy  undirected_rewired.npy  undirected_scores.npy
